--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Install Dependencies
       run: |
-        Invoke-WebRequest -OutFile audition.msi -Uri https://github.com/RailgunLabs/audition/releases/download/v1.0.0/Audition-1.0.0.msi
+        Invoke-WebRequest -OutFile audition.msi -Uri https://github.com/RailgunLabs/audition/releases/download/v1.0.0/Audition-1.0.0-x64.msi
         msiexec /i audition.msi /quiet /norestart
         echo "PATH=$env:PATH;$env:LOCALAPPDATA\Programs\Audition" | Out-File -FilePath $env:GITHUB_ENV -Append
     - name: Run Tests
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Install Audition
       run: |
-        curl -L -o audition.deb https://github.com/RailgunLabs/audition/releases/download/v1.0.0/Audition-1.0.0.deb
+        curl -L -o audition.deb https://github.com/RailgunLabs/audition/releases/download/v1.0.0/libaudition_1.0.0-1_amd64.deb
         sudo dpkg -i ./audition.deb
     - name: Run Tests
       run: |
